--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     const auth = getAuth(app);
 
     // 🔑 Set your admin email
-    const ADMIN_EMAIL = "ermunai.12543@gmail.com";
+    const ADMIN_EMAIL = "ermunaiorganicfarm@gmail.com";
 
     const form = document.getElementById("adminLoginForm");
     const msg = document.getElementById("msg");
