--- a/dashboard-product-page.html
+++ b/dashboard-product-page.html
@@ -317,7 +317,7 @@
       appId: "1:365240050790:web:2d4867d6ab4f93a661f9a7"
     };
     const SUPABASE_URL = "https://svbsrgxqgzuibrrsywix.supabase.co";
-    const SUPABASE_KEY = "eyJ...replace_with_your_key";
+    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InN2YnNyZ3hxZ3p1aWJycnN5d2l4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTcxNjYwODIsImV4cCI6MjA3Mjc0MjA4Mn0.hlwbWVsEn7hNCuEn-u7pQL9B3d5IbfiMSSvbVAX2bx0";
     // ---------- INIT ----------
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
