--- a/dashboard-product-page.html
+++ b/dashboard-product-page.html
@@ -216,7 +216,7 @@
           <button class="filter-btn" data-category="readyToCookMixes">Ready-to-Cook Instant Mixes</button>
           <button class="filter-btn" data-category="instantSoup">Instant Soup Mix</button>
           <button class="filter-btn" data-category="idliPodi">Idli Podi’s</button>
-          <button class="filter-btn" data-category="instant">Ready to Serve</button>
+          <button class="filter-btn" data-category="readytoserve">Ready to Serve</button>
           <button class="filter-btn" data-category="herbal">Herbal Products</button>
           <button class="filter-btn" data-category="disabled">Disabled</button>
         </div>
@@ -279,7 +279,7 @@
             <option value="readyToCookMixes">Ready-to-Cook Instant Mixes</option>
             <option value="instantSoup">Instant Soup Mix</option>
             <option value="idliPodi">Idli Podi’s</option>
-            <option value="instant">Ready to Serve</option>
+            <option value="readytoserve">Ready to Serve</option>
             <option value="herbal">Herbal Products</option>
           </select>
 
