--- a/dashboard-order-page.html
+++ b/dashboard-order-page.html
@@ -39,45 +39,45 @@
     }
 
     /* Sidebar */
-    .sidebar {
-      width: 250px;
-      background: var(--primary);
-      color: var(--white);
-      padding: 24px 12px;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 8px;
-    }
+            a {
+            text-decoration: none;
+            color: inherit;
+        }
 
-    .sidebar h2 {
-      font-size: 18px;
-      margin-bottom: 8px;
-      font-weight: 700
-    }
+        .sidebar {
+            width: 250px;
+            background: var(--primary);
+            color: var(--white);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 2rem 1rem;
+        }
 
-    .nav {
-      list-style: none;
-      width: 100%
-    }
+        .sidebar h2 {
+            margin-bottom: 2rem;
+            font-size: 1.25rem;
+        }
 
-    .nav a {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      padding: 10px;
-      border-radius: 8px;
-      color: inherit;
-      text-decoration: none;
-      font-weight: 600;
-    }
+        .nav {
+            list-style: none;
+            width: 100%;
+        }
 
-    .nav a.active,
-    .nav a:hover {
-      background: var(--accent);
-      color: #222;
-      box-shadow: var(--shadow)
-    }
+        .nav li+li {
+            margin-top: 1rem;
+        }
+
+        .nav a {
+            display: block;
+            padding: 0.75rem 1rem;
+            border-radius: var(--radius);
+        }
+
+        .nav a:hover,
+        .nav a.active {
+            background: var(--accent);
+        }
 
     /* Main */
     .main {
