--- a/dashboard-order-page.html
+++ b/dashboard-order-page.html
@@ -218,16 +218,15 @@
 </head>
 
 <body>
-  <aside class="sidebar">
-    <h2>Ermunai Admin</h2>
-    <ul class="nav">
-      <li><a href="admin-dashboard.html" data-page="dashboard"><i class="fas fa-home"></i> Dashboard</a></li>
-      <li><a href="dashboard-product-page.html" data-page="products"><i class="fas fa-box"></i> Products</a></li>
-      <li><a href="dashboard-order-page.html" data-page="orders" class="active"><i class="fas fa-clipboard-list"></i>
-          Orders</a></li>
-      <li><a href="dashboard-setting.html" data-page="settings"><i class="fas fa-cog"></i> Settings</a></li>
-    </ul>
-  </aside>
+    <aside class="sidebar">
+        <h2>Ermunai Admin</h2>
+        <ul class="nav">
+            <li><a href="admin-dashboard.html" data-page="dashboard">Dashboard</a></li>
+            <li><a href="dashboard-product-page.html" data-page="products">Product Details</a></li>
+            <li><a href="dashboard-order-page.html" data-page="orders" class="active">Order Details</a></li>
+            <li><a href="daashboard-setting.html" data-page="settings">Settings</a></li>
+        </ul>
+    </aside>
 
   <div class="main">
     <h1>Customer Orders</h1>
