--- a/dashboard-order-page.html
+++ b/dashboard-order-page.html
@@ -160,12 +160,12 @@
         flex-direction: column
       }
 
-      .sidebar {
+     /* .sidebar {
         width: 100%;
         flex-direction: row;
         justify-content: space-around;
         padding: 12px
-      }
+      } */
 
       .main {
         padding: 12px
