--- a/dashboard-product-page.html
+++ b/dashboard-product-page.html
@@ -30,19 +30,24 @@
             display: flex;
             min-height: 100vh;
         }
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
 
         .sidebar {
             width: 250px;
             background: var(--primary);
             color: var(--white);
-            padding: 2rem 1rem;
             display: flex;
             flex-direction: column;
             align-items: center;
+            padding: 2rem 1rem;
         }
 
         .sidebar h2 {
-            margin-bottom: 1.5rem;
+            margin-bottom: 2rem;
+            font-size: 1.25rem;
         }
 
         .nav {
@@ -50,18 +55,22 @@
             width: 100%;
         }
 
-        .nav a {
-            display: block;
-            padding: 0.6rem 0.75rem;
-            color: inherit;
-            border-radius: 6px;
-            text-decoration: none;
+        .nav li+li {
+            margin-top: 1rem;
         }
 
-        .nav a.active,
-        .nav a:hover {
+        .nav a {
+            display: block;
+            text-decoration: none;
+            color: var(--white);
+            padding: 0.75rem 1rem;
+            border-radius: var(--radius);
+
+        }
+
+        .nav a:hover,
+        .nav a.active {
             background: var(--accent);
-            color: #222;
         }
 
         .main {
@@ -72,29 +81,37 @@
 
         header {
             background: var(--white);
-            padding: 1rem 1.5rem;
+            padding: 1rem 2rem;
             box-shadow: var(--shadow);
             display: flex;
             align-items: center;
             gap: 1rem;
+            flex-wrap: wrap;
+        }
+
+        header .logo {
+            height: 80px;
+            width: auto;
         }
 
         header h1 {
+            font-size: 1.5rem;
             color: var(--primary);
-            flex: 1;
-            font-size: 1.15rem;
+            flex-grow: 1;
         }
 
         .logout-btn {
             background: #ff5f5f;
-            color: white;
+            color: var(--white);
             border: none;
-            padding: 8px 12px;
-            border-radius: 8px;
+            padding: 8px 16px;
+            border-radius: var(--radius);
             cursor: pointer;
-            display: inline-flex;
-            gap: 8px;
-            align-items: center;
+            font-size: 0.95rem;
+        }
+
+        .logout-btn:hover {
+            background: #e65050;
         }
 
         .content {
@@ -416,10 +433,10 @@
     <aside class="sidebar">
         <h2>Erumunai Admin</h2>
         <ul class="nav">
-            <li><a href="#" data-page="dashboard">Dashboard</a></li>
-            <li><a href="#" data-page="products" class="active">Product Details</a></li>
-            <li><a href="#" data-page="orders">Order Details</a></li>
-            <li><a href="#" data-page="settings">Settings</a></li>
+            <li><a href="admin-dashboard.html" data-page="dashboard">Dashboard</a></li>
+            <li><a href="dashboard-product-page.html" data-page="products" class="active">Product Details</a></li>
+            <li><a href="dashboard-order-page.html" data-page="orders">Order Details</a></li>
+            <li><a href="daashboard-setting.html" data-page="settings">Settings</a></li>
         </ul>
     </aside>
 
